--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,1 +1,24 @@
+/* bawah ini jangan diubah ubah */
+*
+{
+  margin: 0;
+  padding: 0;
+  font-family: 'Montserrat', sans-serif;
+}
 
+/* Tulis css class header dibawah ini */
+
+
+/* Tulis css class heading dibawah ini */
+
+
+/* Tulis css class our-portofolio dibawah ini */
+
+
+/* Tulis css class our-team dibawah ini */
+
+
+/* Tulis css class cta dibawah ini */
+
+
+/* Tulis css class footer dibawah ini */
