--- a/stylesheet.css
+++ b/stylesheet.css
@@ -4,9 +4,53 @@
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
+  box-sizing: border-box;
 }
 
 /* Tulis css class header dibawah ini */
+header {
+  height: 62px;
+  position: fixed;
+  width:100%;
+  padding: 0px 180px;
+  background-color: #fff;
+
+}
+
+.navbar-kiri {
+  float: left;
+  height: 62px;
+}
+
+.navbar-kiri img {
+  margin-top: 16px;
+}
+
+.navbar-kanan {
+  float: right;
+}
+
+.navbar-kanan a {
+  line-height: 62px;
+  padding: 0 32px;
+  color: #1DA1F3;
+  display: block;
+  float: left;
+  text-decoration: none;
+  letter-spacing: -0.5px;
+  font-size: 14px;
+  font-weight: 600;
+  font-style: normal;
+}
+.navbar-kanan a:hover {
+  color: #fff;
+  background-color: #1DA1F3;
+}
+
+.navbar-kanan .fa {
+  margin-right: 8px;
+
+}
 
 
 /* Tulis css class heading dibawah ini */
