--- a/stylesheet.css
+++ b/stylesheet.css
@@ -63,9 +63,9 @@ header {
 
 
 /* Tulis css class cta dibawah ini */
-/*.cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
+.cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
 	position: absolute;
-	width: 1336px;
+	width: 100%;
 	height: 447px;
 	color:white;}
 .cta .container{display:flex;
@@ -98,6 +98,6 @@ header {
 		line-height: 17px;
 		letter-spacing: -0.5px;
 		opacity: 0.7;
-		color:white;}*/
+		color:white;}
 
 /* Tulis css class footer dibawah ini */
