--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,10 +11,15 @@
 header {
   height: 62px;
   position: fixed;
-  width:100%;
-  padding: 0px 180px;
+  z-index: 10;
+  width: 100%;
   background-color: #fff;
+  box-shadow: 0px 6px 10px RGB(0,0,0,0.1);
+}
 
+.container-header {
+  width: 976px;
+  margin: auto;
 }
 
 .navbar-kiri {
@@ -49,7 +54,6 @@ header {
 
 .navbar-kanan .fa {
   margin-right: 8px;
-
 }
 
 
@@ -101,3 +105,56 @@ header {
 		color:white;}
 
 /* Tulis css class footer dibawah ini */
+footer {
+  height: 239px;
+  width: 100%;
+  background-color: #47515C;
+  color: #fff;
+  vertical-align: middle;
+}
+
+.container-footer {
+  padding: 86px 0px;
+  width: 976px;
+  margin: auto;
+}
+
+.footer-kiri {
+float: left;
+
+}
+
+.footer-kiri img {
+  margin-bottom: 16px;
+}
+
+.footer-kiri p {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 12px;
+  line-height: 15px;
+  letter-spacing: -0.5px;
+  opacity: 0.7;
+}
+
+.footer-kanan {
+  float: right;
+  margin: 22px 0px;
+}
+
+.footer-kanan p {
+  float: left;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 22px;
+  letter-spacing: -0.5px;
+  opacity: 0.7;
+}
+
+.footer-kanan a {
+  float: left;
+  margin-left: 32px;
+  color: #fff;
+}
+
