--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,7 +67,7 @@ header {
 
 
 /* Tulis css class cta dibawah ini */
-.cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
+/*.cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
 	position: absolute;
 	width: 100%;
 	height: 447px;
@@ -102,7 +102,7 @@ header {
 		line-height: 17px;
 		letter-spacing: -0.5px;
 		opacity: 0.7;
-		color:white;}
+		color:white;}*/
 
 /* Tulis css class footer dibawah ini */
 footer {
