--- a/stylesheet.css
+++ b/stylesheet.css
@@ -67,8 +67,8 @@ header {
 
 
 /* Tulis css class cta dibawah ini */
-.cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
-	position: absolute;
+.cta
+{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
 	width: 100%;
 	height: 447px;
 	color:white;}
