--- a/stylesheet.css
+++ b/stylesheet.css
@@ -72,14 +72,16 @@ header {
 	width: 100%;
 	height: 447px;
 	color:white;}
-.cta .container{display:flex;
-				margin:auto;}
+.coba{margin:auto;}
+.coba .container{width:1336px;
+					margin:auto;
+					display:flex;}
 .cta-left{margin-left:100px;
 		width:100%;}
 .cta-right{padding:50px;
 			width:100%;}
 .cta-right iframe{margin-left:50px;
-				margin-top:80px;}
+				margin-top:50px;}
 .divide-ctaleft{margin-top:64px;
 				display:flex;
 				margin-bottom:94px;}
@@ -95,7 +97,7 @@ header {
 						font-size: 18px;
 						line-height: 22px;}
 .ctadd{
-		
+		font-family: Montserrat;
 		font-style: normal;
 		font-weight: 500;
 		font-size: 14px;
@@ -103,6 +105,7 @@ header {
 		letter-spacing: -0.5px;
 		opacity: 0.7;
 		color:white;}
+
 /* Tulis css class footer dibawah ini */
 footer {
   height: 239px;
