--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,6 +68,7 @@ header {
 
 /* Tulis css class cta dibawah ini */
 .cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
+	position: fixed;
 	width: 100%;
 	height: 447px;
 	color:white;}
@@ -104,6 +105,7 @@ header {
 		letter-spacing: -0.5px;
 		opacity: 0.7;
 		color:white;}
+
 
 /* Tulis css class footer dibawah ini */
 footer {
