--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,22 +68,23 @@ header {
 
 /* Tulis css class cta dibawah ini */
 .cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
+	
 	width: 100%;
 	height: 447px;
 	color:white;}
 .coba{margin:auto;}
 .coba .container{width:1336px;
-					margin:auto;
-					display:flex;}
+		margin:auto;
+		display:flex;}
 .cta-left{margin-left:100px;
 		width:100%;}
 .cta-right{padding:50px;
-			width:100%;}
+		width:100%;}
 .cta-right iframe{margin-left:50px;
-				margin-top:50px;}
+		margin-top:50px;}
 .divide-ctaleft{margin-top:64px;
-				display:flex;
-				margin-bottom:94px;}
+		display:flex;
+		margin-bottom:94px;}
 .cta-left h3{font-family: Montserrat;
 			font-style: normal;
 			font-weight: 800;
@@ -91,19 +92,18 @@ header {
 			line-height: 60px;}
 .cta-cont{margin-left:50px;}
 .cta-head h5,.cta-cont h5{font-family: Montserrat;
-						font-style: normal;
-						font-weight: 600;
-						font-size: 18px;
-						line-height: 22px;}
-.ctadd{
-		font-family: Montserrat;
-		font-style: normal;
-		font-weight: 500;
-		font-size: 14px;
-		line-height: 17px;
-		letter-spacing: -0.5px;
-		opacity: 0.7;
-		color:white;}
+			font-style: normal;
+			font-weight: 600;
+			font-size: 18px;
+			line-height: 22px;}
+.ctadd{font-family: Montserrat;
+	font-style: normal;
+	font-weight: 500;
+	font-size: 14px;
+	line-height: 17px;
+	letter-spacing: -0.5px;
+	opacity: 0.7;
+	color:white;}
 
 
 /* Tulis css class footer dibawah ini */
