--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,7 +68,7 @@ header {
 
 /* Tulis css class cta dibawah ini */
 .cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
-	
+	display:fixed;
 	width: 100%;
 	height: 447px;
 	color:white;}
