--- a/stylesheet.css
+++ b/stylesheet.css
@@ -70,9 +70,7 @@ header {
 .cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
   	position: fixed;
 	width: 100%;
-	height: 447px;
-	color:white;}
-.coba{margin:auto;}
+	height: 447px;}
 .coba .container{width:1336px;
 		margin:auto;
 		display:flex;}
