--- a/stylesheet.css
+++ b/stylesheet.css
@@ -68,11 +68,13 @@ header {
 
 /* Tulis css class cta dibawah ini */
 .cta{background:linear-gradient(352.01deg, #2869C2 22.22%, #1DA1F3 85.22%);
-	width: 1336px;
-	height: 447px;}
-.coba .container{width:100%;
-		margin:auto;
-		display:flex;}
+	display:fixed;
+	width: 100%;
+	height: 447px;
+	color:white;}
+.coba .container{width:1336px;
+					margin:auto;
+					display:flex;}
 .cta-left{margin-left:100px;
 		width:100%;}
 .cta-right{padding:50px;
@@ -80,8 +82,8 @@ header {
 .cta-right iframe{margin-left:50px;
 				margin-top:50px;}
 .divide-ctaleft{margin-top:64px;
-		display:flex;
-		margin-bottom:94px;}
+				display:flex;
+				margin-bottom:94px;}
 .cta-left h3{font-family: Montserrat;
 			font-style: normal;
 			font-weight: 800;
@@ -99,8 +101,8 @@ header {
 	font-size: 14px;
 	line-height: 17px;
 	letter-spacing: -0.5px;
-	opacity: 0.7;
-	color:white;}
+	opacity: 0.7;}
+
 
 /* Tulis css class footer dibawah ini */
 footer {
