--- a/stylesheet.css
+++ b/stylesheet.css
@@ -71,7 +71,7 @@ header {
 	
 	width: 100%;
 	height: 447px;
-	color:white;}
+	color:'white';}
 .coba .container{width:1336px;
 					margin:auto;
 					display:flex;}
@@ -84,24 +84,25 @@ header {
 .divide-ctaleft{margin-top:64px;
 				display:flex;
 				margin-bottom:94px;}
-.cta-left h3{font-family: Montserrat;
+.cta-left h3{font-family: 'Montserrat';
 			font-style: normal;
 			font-weight: 800;
 			font-size: 60px;
 			line-height: 60px;}
 .cta-cont{margin-left:50px;}
-.cta-head h5,.cta-cont h5{font-family: Montserrat;
+.cta-head h5,.cta-cont h5{font-family: 'Montserrat';
 			font-style: normal;
 			font-weight: 600;
 			font-size: 18px;
 			line-height: 22px;}
-.ctadd{font-family: Montserrat;
+.ctadd{font-family: 'Montserrat';
 	font-style: normal;
 	font-weight: 500;
 	font-size: 14px;
 	line-height: 17px;
 	letter-spacing: -0.5px;
-	opacity: 0.7;}
+	opacity: 0.7;
+	color:'white';}
 
 
 /* Tulis css class footer dibawah ini */
