--- a/stylesheet.css
+++ b/stylesheet.css
@@ -73,24 +73,24 @@ header {
 	height: 447px;
 	color:'white';}
 .coba .container{width:1336px;
-					margin:auto;
-					display:flex;}
+		margin:auto;
+		display:flex;}
 .cta-left{margin-left:100px;
 		width:100%;}
 .cta-right{padding:50px;
-			width:100%;}
+		width:100%;}
 .cta-right iframe{margin-left:50px;
-				margin-top:50px;}
+		margin-top:50px;}
 .divide-ctaleft{margin-top:64px;
-				display:flex;
-				margin-bottom:94px;}
-.cta-left h3{font-family: 'Montserrat';
+		display:flex;
+		margin-bottom:94px;}
+.cta-left h3{font-family: 'Montserrat', sans-serif;
 			font-style: normal;
 			font-weight: 800;
 			font-size: 60px;
 			line-height: 60px;}
 .cta-cont{margin-left:50px;}
-.cta-head h5,.cta-cont h5{font-family: 'Montserrat';
+.cta-head h5,.cta-cont h5{font-family: 'Montserrat', sans-serif;
 			font-style: normal;
 			font-weight: 600;
 			font-size: 18px;
@@ -102,8 +102,7 @@ header {
 	line-height: 17px;
 	letter-spacing: -0.5px;
 	opacity: 0.7;
-	color:'white';}
-
+	color:#fff;}
 
 /* Tulis css class footer dibawah ini */
 footer {
