--- a/stylesheet.css
+++ b/stylesheet.css
@@ -88,7 +88,8 @@ header {
 			font-style: normal;
 			font-weight: 800;
 			font-size: 60px;
-			line-height: 60px;}
+			line-height: 60px;
+			color:#fff;}
 .cta-cont{margin-left:50px;}
 .cta-head h5,.cta-cont h5{font-family: 'Montserrat', sans-serif;
 			font-style: normal;
