--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,7 +1,7 @@
 /* bawah ini jangan diubah ubah */
 *
 {
-  /*margin: 0;*/
+  margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   box-sizing: border-box;
