--- a/stylesheet.css
+++ b/stylesheet.css
@@ -61,7 +61,55 @@ header {
 
 
 /* Tulis css class our-portofolio dibawah ini */
+.container-portofolio{
+  width: 100%;
+  height: 503px;
+}
+.our-portofolio-right{
+  padding-top: 114px;
+  float: right;
+  width: 451px;
+  height: 503px;
 
+}
+
+.our-portofolio-left{
+  padding-top: 232px;
+  padding-left: 174px;
+}
+
+.logo-mini{
+  padding-bottom: 48px;
+}
+
+.text-our-portofolio{
+  padding-bottom: 32px;
+  
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 32px;
+  line-height: 110.34%;
+
+  letter-spacing: -0.5px;
+
+  color: #232323;
+}
+
+.reason{
+  width: 485px;
+  height: 87px;
+
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 29px;
+
+  color: #232323;
+
+  opacity: 0.8;
+}
 
 /* Tulis css class our-team dibawah ini */
 .our-team{
